--- a/01 - JavaScript Drum Kit/style.css
+++ b/01 - JavaScript Drum Kit/style.css
@@ -24,6 +24,7 @@ body,html {
   margin: 1rem;
   font-size: 1.5rem;
   padding: 1rem .5rem;
+  /* transition gets the playing class added to it */
   transition: all .07s ease;
   width: 10rem;
   text-align: center;
@@ -33,6 +34,7 @@ body,html {
 }
 
 .playing {
+  /* the key gets scaled up, the border color gets changed, and the box shadow gets changed  */
   transform: scale(1.1);
   border-color: #ffc600;
   box-shadow: 0 0 1rem #ffc600;
