Update exercises 21, 22, and 23

--- a/22 - Follow Along Link Highlighter/style.css
+++ b/22 - Follow Along Link Highlighter/style.css
@@ -33,6 +33,7 @@ a {
 }
 
 .highlight {
+  /* transition time is how long the change takes */
   transition: all 0.2s;
   border-bottom: 2px solid white;
   position: absolute;
