--- a/27 - Click and Drag/style.css
+++ b/27 - Click and Drag/style.css
@@ -1,3 +1,5 @@
+/* class of active that resizes the scale to make it bigger when clicked 
+   rotate y and a perspective */
 html {
   box-sizing: border-box;
   background: url('https://source.unsplash.com/NFs6dRTBgaM/2000x2000') fixed;
