--- a/30 - Whack A Mole/style.css
+++ b/30 - Whack A Mole/style.css
@@ -58,12 +58,15 @@ h1 {
   background: url('mole.svg') bottom center no-repeat;
   background-size: 60%;
   position: absolute;
+  /* with top: 100%, the mole is fully hidden */
   top: 100%;
   width: 100%;
   height: 100%;
+  /*takes 0.4 s to go from .mole to .hole.up */
   transition:all 0.4s;
 }
 
 .hole.up .mole {
+  /* the mole is showing with top: 0 */
   top: 0;
 }
